# QIqi-standard-robot

chassis_AGV/AGV/MDK-ARM/standard_tpye_c/: chassis_task.crf  infantry_C_infantry_C.dep  standard_tpye_c.axf  standard_tpye_c.build_log.htm  standard_tpye_c.hex  standard_tpye_c.htm  standard_tpye_c.map
chassis_AGV/AGV/application/: chassis_task.c
doc/: 开发规则.md
gimbal/: README.md
gimbal/MDK-ARM/: .clangd  .gitignore  JLinkLog.txt  standard_gimbal+standardgimbal.cbuild.yml  standard_gimbal+standardgimbal.cprj  standard_gimbal.cbuild-idx.yml  standard_gimbal.cproject.yaml  standard_gimbal.csolution.yaml  standard_gimbal.uvguix.discipline  standard_gimbal.uvoptx  standard_gimbal.uvprojx  standard_robot+standardrobot.cprj  standard_robot.uvguix.discipline  standard_robot.uvoptx  standard_robot.uvprojx  startup_stm32f407xx.lst
gimbal/MDK-ARM/RTE/_standard_gimbal/: RTE_Components.h
gimbal/MDK-ARM/RTE/_standard_robot_gimbal/: RTE_Components.h
gimbal/MDK-ARM/RTE/_standardgimbal/: RTE_Components.h
gimbal/MDK-ARM/standard_tpye_c/: ahrs_middleware.d  bmi088driver.d  bmi088middleware.d  bsp_adc.d  bsp_buzzer.d  bsp_can.d  bsp_crc32.d  bsp_delay.d  bsp_dwt.d  bsp_flash.d  bsp_fric.d  bsp_i2c.d  bsp_imu_pwm.d  bsp_laser.d  bsp_led.d  bsp_pwm.d  bsp_rc.d  bsp_rng.d  bsp_servo_pwm.d  bsp_spi.d  bsp_usart.d  can_comm.d  can_receive.d  chassis_task.d  controller.d  crc8_crc16.d  fifo.d  freertos.d  gimbal_behaviour.d  gimbal_task.d  ins_task.d  ist8310driver.d  ist8310driver_middleware.d  kalman_filter.d  led_flow_task.d  main.d  mem_mang4.d  oled.d  pid.d  quaternionekf.d  (+21 more)
gimbal/MDK-ARM/tmp/standard_gimbal/standardgimbal/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
gimbal/Src/: freertos.c  main.c
gimbal/application/: CAN_receive.c  CAN_receive.h  INS_task.c  can_comm_task.c  can_comm_task.h  chassis_behaviour.c  chassis_task.c  chassis_task.h  gimbal_behaviour.c  gimbal_task.c  gimbal_task.h  shoot_task.c  shoot_task.h
gimbal/application/interface/: README.md
gimbal/application/interface/gimbal_chassis_interface/: README.md  gimbal_chassis_interface.h
gimbal/components/controller/stm32/: stm32.h
gimbal/lowerComputer/MDK-ARM/: .clangd
gimbal/module/can_comm/: can_comm.c  can_comm.h  cmake_install.cmake
gimbal/module/can_packet_connection/: can_packet_connection.c  can_packet_connection.h  can_packet_connection.h.gch
gimbal/module/controller/stm32/: stm32.c
gimbal/module/crc8_crc16/: CRC8_CRC16.h
gimbal/module/dji_motor/: CAN_receive.c  CAN_receive.h
gimbal/module/serialPort_debug/: README.md  serialPort_debug.c  serialPort_debug.h
gimbal/module/test/: CMakeLists.txt
线路图/: .$标准步兵整体线路图纸.drawio.bkp  .$标准步兵整体线路图纸.drawio.dtmp  .$标准步兵线路图纸.drawio.bkp  标准步兵整体线路图纸.drawio  标准步兵线路图纸.drawio
